# raydium-clmm

client/: Cargo.toml
client/src/: main.rs
client/src/instructions/: amm_instructions.rs  events_instructions_parse.rs  rpc.rs  token_instructions.rs  utils.rs
programs/amm/: Cargo.toml
programs/amm/src/instructions/: open_position.rs
programs/amm/src/util/: token.rs
