[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
raydium-amm-v3 = { path = "../programs/amm", features = [
    "no-entrypoint",
    "client",
] }
# Essential Solana dependencies (only those not re-exported by anchor-client)
solana-transaction-status = "*"
# Essential SPL dependencies
spl-token = { version = "*", features = ["no-entrypoint"] }
spl-token-2022 = { version = "*", features = ["no-entrypoint"] }
spl-token-client = "*"
spl-associated-token-account = { version = "*", features = [
    "no-entrypoint",
] }
spl-memo = "*"
mpl-token-metadata = { version = "5.1.0" }
# Basic utilities
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.32"
rand = "0.9.0"
hex = "0.4.3"
configparser = "3.0.0"
serde_json = { version = "1.0.78" }
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3.7"
bs58 = { version = "0.5.1" }
bincode = { version = "1.3.3" }
regex = "1"
colorful = "0.3.2"
base64 = "0.21.0"
